syntax = "proto3";

package upload.v1;

option go_package = "github.com/romashorodok/stream-source/pb/go/upload/v1;uploadpb";

enum UploadStatus {
    UPLOAD_STATUS_UNSPECIFIED = 0;
    UPLOAD_STATUS_OK = 1;
    UPLOAD_STATUS_BAD = 2;
}

message GetUploadURL {
    string file_name = 1;
}

message UploadURL {
    string url = 1;
}
